The notebook on correlation of the linear combination of random variables is updated.

--- a/Multivariate Probability/Correlation_random_variables.ipynb
+++ b/Multivariate Probability/Correlation_random_variables.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3aaa336f",
+   "id": "5038b592",
    "metadata": {},
    "source": [
-    "# "
+    "# Correlation of the linear combination of random variables"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a941350",
+   "id": "fd3baad8",
    "metadata": {},
    "source": [
     "### Exercise\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b8856cd",
+   "id": "8d064141",
    "metadata": {},
    "source": [
     "### Solution\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29cb5777",
+   "id": "d5c8cf6f",
    "metadata": {},
    "source": [
     "We see above that $Y_1$ and $Y_2$ are correlated random variables, that is, they are not independent variables. The correlation between $Y_1$ and $Y_2$ is:\n",
